maintenance issue fix